--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div style="height: 100%;"
      leaflet
+     [leafletBaseLayers]="baseLayers"
      (leafletMapReady)="onMapReady($event)"
      [leafletOptions]="options">
 </div>
